base/icecast-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icecast-deployment
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      component: icecast-deployment
  template:
    metadata:
      labels:
        component: icecast-deployment
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: icecast
          image: rechlinks/icecast-relay
          imagePullPolicy: Always
          ports:
           - containerPort: 8000
