base/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    app: node-deployment
  namespace: production
spec:
  minReadySeconds: 5
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: node-deployment
  replicas: 2
  template:
    metadata:
      labels:
        app: node-deployment
      annotations:
        linkerd.io/inject: enabled
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: node-deployment
          image: rechlinks/liszto-node:0.0.6
          imagePullPolicy: Always
          ports:
           - containerPort: 5000
          volumeMounts:
            - name: nfs
              mountPath: /home/liszto/LISZTO-BACKEND/data
            - name: configurationfile
              mountPath: /home/liszto/LISZTO-BACKEND/configurations/config/ipConfiguration.config.js
              subPath: ipConfiguration.config.js
            - name: configurationfile
              mountPath: /home/liszto/LISZTO-BACKEND/configurations/config/liquidsoap.config.liq
              subPath: liquidsoap.config.liq
            - name: configurationfile
              mountPath: /home/liszto/LISZTO-BACKEND/configurations/config/dbConfiguration.config.js
              subPath: dbConfiguration.config.js
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs
        - name: configurationfile
          configMap:
            name: configmap-ip-liq
