base/icecast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icecast-service
  namespace: ingress-nginx
spec:
  type: ClusterIP
  selector:
    component: icecast-deployment
  ports:
    - port: 8000
      targetPort: 8000
