base/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: node-deployment
  ports:
    - port: 5000
      targetPort: 5000
