base/redis-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: ubuntu/redis:edge
        volumeMounts:
        - name: redis-config-volume
          mountPath: /etc/redis/redis.conf
          subPath: redis.conf
        ports:
        - containerPort: 6379
          name: redis
          protocol: TCP
      volumes:
        - name: redis-config-volume
          configMap:
            name: redis-config
            items:
            - key: redis
              path: redis.conf
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: ingress-nginx
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
    name: redis
