base/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: nodek.liszto.app
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: node-service
              port:
                number: 5000
    - host: icecastk.liszto.app
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: icecast-service
              port:
                number: 8000
