base/node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  namespace: production
  labels:
    app: node-deployment
  annotations:
    nginx.ingress.kubernetes.io/upstream-hash-by: "$host"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  ingressClassName: nginx
  rules:
    - host: node.liszto.app
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: node-deployment
              port:
                number: 5000
